--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcPhCI1UonwncZx4dUYFyzxZarVjm1yW8" async defer></script>
 </body>
 </html>
